styles: fix scrollbar glitch

--- a/src/app/app-shell/app-shell.component.scss
+++ b/src/app/app-shell/app-shell.component.scss
@@ -66,9 +66,9 @@ app-side-drawer {
 }
 
 footer {
-  width: 250px;
+  width: 220px;
   height: 50px;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   z-index: var(--theme-tooptip-zIndex);
   background-color: white;
