--- a/src/app/shared/component/side-drawer/side-drawer.component.scss
+++ b/src/app/shared/component/side-drawer/side-drawer.component.scss
@@ -9,7 +9,7 @@
   left: 0;
   top: 0;
   z-index: var(--theme-drawer-zIndex);
-  padding: 32px 16px;
+  padding: 32px 16px 50px;
   overflow-y: auto;
   box-sizing: border-box;
   transition: transform var(--theme-anim-duration-short)
